# tesst

./: .env  db.sqlite3  manage.py  pyproject.toml
apps/general/: serializers.py  urls.py  views.py
core_project_backend/: asgi.py  urls.py  wsgi.py
core_project_backend/settings/: base.py  production.py
utils/: mock_data.py
