[tool.poetry]
name = "nilva_project"
version = "0.1.0"
description = ""
authors = ["MohRezam <mkalhor81126@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.tasks]
migrate = "python manage.py migrate"
dev = "python manage.py runserver"
celery = "celery -A project worker --loglevel=info"